# do-board

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: build.yml  docker.yml  lint.yml  security.yml  test.yml
backend/: Cargo.toml  Dockerfile  Dockerfile.dev
backend/migrations/: 0001_create_users.sql  0002_create_saved_devices.sql  0003_create_screens.sql  0004_screen_default.sql  0005_create_devices.sql  0006_drop_saved_devices.sql  0007_create_media.sql
backend/src/: auth.rs  db.rs  gtfs.rs  main.rs  pubsub.rs  screen_query.rs  state.rs
backend/src/fixtures/: mod.rs  users.rs
backend/src/routes/: birthdays.rs  dashboards.rs  devices.rs  login.rs  media.rs  mod.rs  proxy.rs  screens.rs  transport.rs  users.rs  weather.rs
frontend/: Cargo.toml  Dioxus.toml  Dockerfile  Dockerfile.dev  build.rs  index.html  input.css  nginx.conf  nginx.conf.template
frontend/src/: auth.rs  main.rs
frontend/src/components/: button.rs  card.rs  checkbox.rs  icon.rs  input.rs  input_group.rs  label.rs  mod.rs  navigation_menu.rs  radio_group.rs  sidebar.rs  theme_toggle.rs
frontend/src/layouts/: auth_guard.rs  main_layout.rs  mod.rs
frontend/src/routes/: home.rs  login.rs  mod.rs  not_found.rs  screen.rs  screen_editor.rs  screens.rs  settings.rs  users.rs
helm/do-board/: .helmignore  Chart.yaml  values.yaml
helm/do-board/templates/: NOTES.txt  _helpers.tpl  backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  postgresql-secret.yaml  postgresql-service.yaml  postgresql-statefulset.yaml  secret.yaml
shared/src/: lib.rs
