[workspace]
members = [
    "backend",
    "frontend",
    "shared",
]
resolver = "2"

[profile.release]
strip = "debuginfo"

[workspace.metadata]
app_name = "do-board"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
