[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
axum = { version = "0.8", features = ["ws"] }
chrono = "0.4.45"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "tls-rustls-ring", "postgres", "chrono", "uuid", "migrate", "macros"] }
bcrypt = "0.15"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
