[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "frontend"
path = "src/main.rs"

[build-dependencies]
toml = "0.8"
serde = { workspace = true }

[dependencies]
shared = { path = "../shared" }
dioxus = { version = "0.7", features = ["web", "router"] }
serde = { workspace = true }
serde_json = { workspace = true }
web-sys = { version = "0.3", features = ["Document", "Element", "DomTokenList", "Window", "WebSocket"] }
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
